# yadio

./: LICENSE  pyproject.toml
src/yadio/: cli.py  yadio.py
